<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    <item
        android:id="@+id/action_multi_download"
        android:title="@string/action_multi_download"
        android:icon="@android:drawable/ic_menu_save"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never"
        android:orderInCategory="5" />

    <item
        android:id="@+id/action_multi_delete"
        android:title="@string/action_multi_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never"
        android:orderInCategory="6" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@android:drawable/ic_menu_agenda"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never"
        android:orderInCategory="7" />

    <item
        android:id="@+id/action_clear_selection"
        android:title="@string/action_clear_selection"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never"
        android:orderInCategory="8" />
    -->
    <item
        android:id="@+id/action_transfer_queue"
        android:title="@string/transfer_queue_title"
        android:icon="@drawable/ic_transfer_queue"
        app:showAsAction="never"
        android:orderInCategory="8" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        android:orderInCategory="9" />

    <item
        android:id="@+id/action_system_monitor"
        android:title="@string/system_monitor"
        android:icon="@drawable/ic_system_monitor"
        app:showAsAction="never"
        android:orderInCategory="10" />

    <item
        android:id="@+id/action_quit"
        android:title="@string/quit_app"
        android:icon="@drawable/ic_power_off"
        app:showAsAction="never"
        android:orderInCategory="100" />
</menu>
